# campus-network-autologin

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: autostart.rs  config.rs  daemon.rs  logging.rs  main.rs  network.rs  portal.rs  tui.rs
src/tui/: app.rs  input.rs  mod.rs  status.rs
