[package]
name = "campus-network-autologin"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4.6", features = ["derive"] }
crossterm = "0.29"
directories = "6"
ipnet = "2.12"
md5 = "0.8"
ratatui = "0.30"
reqwest = { version = "0.13", default-features = false, features = [
    "blocking",
    "brotli",
    "deflate",
    "form",
    "gzip",
    "http2",
    "rustls",
] }
serde = { version = "1", features = ["derive"] }
toml = "1"

[target.'cfg(any(unix, windows))'.dependencies]
if-addrs = "0.15"

[profile.release]
opt-level = 2
codegen-units = 16
incremental = true
panic = "abort"
strip = "debuginfo"
